--- a/public/css/app.css
+++ b/public/css/app.css
@@ -505,6 +505,8 @@ video {
   right: 0px;
 }.top-3 {
   top: 0.75rem;
+}.bottom-0 {
+  bottom: 0px;
 }.top-3\.5 {
   top: 0.875rem;
 }.left-0 {
@@ -523,8 +525,6 @@ video {
   z-index: 50;
 }.z-30 {
   z-index: 30;
-}.col-span-4 {
-  grid-column: span 4 / span 4;
 }.float-left {
   float: left;
 }.m-0 {
@@ -535,9 +535,6 @@ video {
 }.-mx-3 {
   margin-left: -0.75rem;
   margin-right: -0.75rem;
-}.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }.my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -570,10 +567,38 @@ video {
   margin-bottom: 1.5rem;
 }.mt-3 {
   margin-top: 0.75rem;
-}.mt-10 {
-  margin-top: 2.5rem;
-}.mt-5 {
-  margin-top: 1.25rem;
+}.ml-auto {
+  margin-left: auto;
+}.mr-1\.5 {
+  margin-right: 0.375rem;
+}.mr-1 {
+  margin-right: 0.25rem;
+}.mb-16 {
+  margin-bottom: 4rem;
+}.mb-5 {
+  margin-bottom: 1.25rem;
+}.mb-8 {
+  margin-bottom: 2rem;
+}.mb-12 {
+  margin-bottom: 3rem;
+}.mb-7 {
+  margin-bottom: 1.75rem;
+}.mt-0\.5 {
+  margin-top: 0.125rem;
+}.ml-0 {
+  margin-left: 0px;
+}.mt-0 {
+  margin-top: 0px;
+}.mt-7 {
+  margin-top: 1.75rem;
+}.mb-2\.5 {
+  margin-bottom: 0.625rem;
+}.ml-14 {
+  margin-left: 3.5rem;
+}.mb-3 {
+  margin-bottom: 0.75rem;
+}.mb-9 {
+  margin-bottom: 2.25rem;
 }.mt-2 {
   margin-top: 0.5rem;
 }.mr-2 {
@@ -590,10 +615,6 @@ video {
   margin-left: 3rem;
 }.-mt-px {
   margin-top: -1px;
-}.mt-0 {
-  margin-top: 0px;
-}.mt-0\.5 {
-  margin-top: 0.125rem;
 }.mr-12 {
   margin-right: 3rem;
 }.mt-32 {
@@ -602,6 +623,8 @@ video {
   margin-bottom: 0.125rem;
 }.-ml-12 {
   margin-left: -3rem;
+}.mr-3 {
+  margin-right: 0.75rem;
 }.-mr-32 {
   margin-right: -8rem;
 }.-ml-16 {
@@ -610,8 +633,8 @@ video {
   margin-top: 0.25rem;
 }.-mr-2 {
   margin-right: -0.5rem;
-}.mr-3 {
-  margin-right: 0.75rem;
+}.mt-5 {
+  margin-top: 1.25rem;
 }.block {
   display: block;
 }.inline-block {
@@ -636,22 +659,44 @@ video {
   height: 3rem;
 }.h-8 {
   height: 2rem;
+}.h-0\.5 {
+  height: 0.125rem;
+}.h-0 {
+  height: 0px;
+}.h-40 {
+  height: 10rem;
 }.h-16 {
   height: 4rem;
 }.h-full {
   height: 100%;
 }.h-px {
   height: 1px;
-}.h-0\.5 {
-  height: 0.125rem;
-}.h-0 {
-  height: 0px;
 }.h-20 {
   height: 5rem;
 }.h-4 {
   height: 1rem;
 }.h-6 {
   height: 1.5rem;
+}.h-\[\'200px\'\] {
+  height: '200px';
+}.h-\[\'1000px\'\] {
+  height: '1000px';
+}.h-\[1000px\] {
+  height: 1000px;
+}.h-28 {
+  height: 7rem;
+}.h-80 {
+  height: 20rem;
+}.h-\[\"1000px\"\] {
+  height: "1000px";
+}.h-\[32rem\] {
+  height: 32rem;
+}.h-\[100rem\] {
+  height: 100rem;
+}.h-2\/4 {
+  height: 50%;
+}.h-96 {
+  height: 24rem;
 }.max-h-8 {
   max-height: 2rem;
 }.max-h-screen {
@@ -666,18 +711,14 @@ video {
   width: 2.25rem;
 }.w-12 {
   width: 3rem;
-}.w-52 {
-  width: 13rem;
-}.w-3\/4 {
-  width: 75%;
-}.w-10\/12 {
-  width: 83.333333%;
+}.w-8 {
+  width: 2rem;
+}.w-11 {
+  width: 2.75rem;
 }.w-2\/3 {
   width: 66.666667%;
 }.w-48 {
   width: 12rem;
-}.w-8 {
-  width: 2rem;
 }.w-auto {
   width: auto;
 }.w-4 {
@@ -692,6 +733,12 @@ video {
   width: 66.666667%;
 }.w-6 {
   width: 1.5rem;
+}.w-3\/4 {
+  width: 75%;
+}.w-1\/2 {
+  width: 50%;
+}.w-11\/12 {
+  width: 91.666667%;
 }.min-w-0 {
   min-width: 0px;
 }.max-w-7xl {
@@ -714,8 +761,6 @@ video {
   flex-grow: 1;
 }.grow {
   flex-grow: 1;
-}.basis-1\/12 {
-  flex-basis: 8.333333%;
 }.basis-1\/3 {
   flex-basis: 33.333333%;
 }.basis-full {
@@ -756,8 +801,6 @@ video {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
-}.list-decimal {
-  list-style-type: decimal;
 }.list-none {
   list-style-type: none;
 }.appearance-none {
@@ -784,14 +827,12 @@ video {
   justify-content: space-between;
 }.justify-items-center {
   justify-items: center;
-}.gap-2 {
-  gap: 0.5rem;
-}.gap-7 {
-  gap: 1.75rem;
-}.gap-5 {
-  gap: 1.25rem;
 }.gap-4 {
   gap: 1rem;
+}.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }.space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -826,12 +867,10 @@ video {
   border-radius: 0.5rem;
 }.rounded-2xl {
   border-radius: 1rem;
-}.rounded-\[20px\] {
-  border-radius: 20px;
-}.rounded-sm {
-  border-radius: 0.125rem;
 }.rounded {
   border-radius: 0.25rem;
+}.rounded-sm {
+  border-radius: 0.125rem;
 }.rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -856,22 +895,20 @@ video {
   border-bottom-width: 1px;
 }.border-b-0 {
   border-bottom-width: 0px;
-}.border-b-2 {
-  border-bottom-width: 2px;
-}.border-b-\[1px\] {
-  border-bottom-width: 1px;
 }.border-l-4 {
   border-left-width: 4px;
 }.border-t {
   border-top-width: 1px;
 }.border-r {
   border-right-width: 1px;
+}.border-b-2 {
+  border-bottom-width: 2px;
 }.border-t-0 {
   border-top-width: 0px;
 }.border-solid {
   border-style: solid;
-}.border-dashed {
-  border-style: dashed;
+}.border-none {
+  border-style: none;
 }.border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -880,12 +917,6 @@ video {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }.border-transparent {
   border-color: transparent;
-}.border-\[\#60A547\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(96 165 71 / var(--tw-border-opacity));
-}.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }.border-indigo-400 {
   --tw-border-opacity: 1;
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
@@ -895,12 +926,12 @@ video {
 }.border-fuchsia-500 {
   --tw-border-opacity: 1;
   border-color: rgb(217 70 239 / var(--tw-border-opacity));
-}.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }.border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }.border-b-transparent {
   border-bottom-color: transparent;
 }.bg-white {
@@ -911,8 +942,9 @@ video {
 }.bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}.bg-white\/20 {
-  background-color: rgb(255 255 255 / 0.2);
+}.bg-indigo-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }.bg-indigo-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
@@ -935,6 +967,9 @@ video {
 }.bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }.bg-gradient-to-tl {
   background-image: linear-gradient(to top left, var(--tw-gradient-stops));
 }.bg-gradient-to-r {
@@ -1001,9 +1036,6 @@ video {
   fill: currentColor;
 }.stroke-0 {
   stroke-width: 0;
-}.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
 }.p-2 {
   padding: 0.5rem;
 }.p-0 {
@@ -1014,14 +1046,6 @@ video {
   padding: 1.5rem;
 }.p-4 {
   padding: 1rem;
-}.p-5 {
-  padding: 1.25rem;
-}.p-10 {
-  padding: 2.5rem;
-}.p-8 {
-  padding: 2rem;
-}.p-12 {
-  padding: 3rem;
 }.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1049,15 +1073,21 @@ video {
 }.px-0 {
   padding-left: 0px;
   padding-right: 0px;
-}.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}.py-14 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
+}.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}.py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}.py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
 }.py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1082,8 +1112,22 @@ video {
   padding-top: 0px;
 }.pb-2 {
   padding-bottom: 0.5rem;
-}.pb-10 {
-  padding-bottom: 2.5rem;
+}.pl-0 {
+  padding-left: 0px;
+}.pt-4 {
+  padding-top: 1rem;
+}.pb-14 {
+  padding-bottom: 3.5rem;
+}.pt-12 {
+  padding-top: 3rem;
+}.pb-16 {
+  padding-bottom: 4rem;
+}.pt-16 {
+  padding-top: 4rem;
+}.pb-12 {
+  padding-bottom: 3rem;
+}.pb-px {
+  padding-bottom: 1px;
 }.pl-3 {
   padding-left: 0.75rem;
 }.pr-4 {
@@ -1092,12 +1136,8 @@ video {
   padding-top: 2rem;
 }.pt-1 {
   padding-top: 0.25rem;
-}.pl-0 {
-  padding-left: 0px;
 }.pl-4 {
   padding-left: 1rem;
-}.pt-4 {
-  padding-top: 1rem;
 }.pb-1 {
   padding-bottom: 0.25rem;
 }.pr-0 {
@@ -1139,18 +1179,12 @@ video {
 }.text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }.text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }.text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1166,8 +1200,8 @@ video {
   text-transform: uppercase;
 }.capitalize {
   text-transform: capitalize;
-}.normal-case {
-  text-transform: none;
+}.italic {
+  font-style: italic;
 }.leading-5 {
   line-height: 1.25rem;
 }.leading-normal {
@@ -1176,10 +1210,12 @@ video {
   line-height: 1.25;
 }.leading-none {
   line-height: 1;
-}.leading-7 {
-  line-height: 1.75rem;
 }.leading-4 {
   line-height: 1rem;
+}.leading-10 {
+  line-height: 2.5rem;
+}.leading-7 {
+  line-height: 1.75rem;
 }.tracking-wider {
   letter-spacing: 0.05em;
 }.tracking-widest {
@@ -1207,15 +1243,12 @@ video {
 }.text-slate-700 {
   --tw-text-opacity: 1;
   color: rgb(51 65 85 / var(--tw-text-opacity));
-}.text-rose-50 {
+}.text-gray-800 {
   --tw-text-opacity: 1;
-  color: rgb(255 241 242 / var(--tw-text-opacity));
-}.text-\[\#60A547\] {
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}.text-indigo-600 {
   --tw-text-opacity: 1;
-  color: rgb(96 165 71 / var(--tw-text-opacity));
-}.text-\[\#648459\] {
-  --tw-text-opacity: 1;
-  color: rgb(100 132 89 / var(--tw-text-opacity));
+  color: rgb(79 70 229 / var(--tw-text-opacity));
 }.text-indigo-700 {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
@@ -1243,14 +1276,13 @@ video {
 }.text-fuchsia-500 {
   --tw-text-opacity: 1;
   color: rgb(217 70 239 / var(--tw-text-opacity));
-}.text-gray-800 {
+}.text-black {
   --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}.text-indigo-600 {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
+}.no-underline {
+  text-decoration-line: none;
 }.antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -1406,10 +1438,6 @@ video {
   content: var(--tw-content);
   --tw-translate-x: 1.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.hover\:scale-105:hover {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1419,8 +1447,6 @@ video {
 }.hover\:border-blue-400:hover {
   --tw-border-opacity: 1;
   border-color: rgb(96 165 250 / var(--tw-border-opacity));
-}.hover\:bg-white\/30:hover {
-  background-color: rgb(255 255 255 / 0.3);
 }.hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1432,18 +1458,21 @@ video {
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }.hover\:bg-transparent:hover {
   background-color: transparent;
-}.hover\:bg-red-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }.hover\:bg-blue-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(239 246 255 / var(--tw-bg-opacity));
+}.hover\:bg-red-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }.hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}.hover\:text-pink-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(236 72 153 / var(--tw-text-opacity));
 }.hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
@@ -1456,6 +1485,8 @@ video {
 }.hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}.hover\:no-underline:hover {
+  text-decoration-line: none;
 }.hover\:opacity-75:hover {
   opacity: 0.75;
 }.hover\:shadow-none:hover {
@@ -1503,6 +1534,8 @@ video {
 }.focus\:text-gray-500:focus {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}.focus\:no-underline:focus {
+  text-decoration-line: none;
 }.focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1642,87 +1675,142 @@ video {
   }.sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }.sm\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }.sm\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }.sm\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
   }.sm\:pt-0 {
     padding-top: 0px;
   }
-}@media (min-width: 768px) {.md\:col-span-10 {
-    grid-column: span 10 / span 10;
-  }.md\:ml-auto {
+}@media (min-width: 768px) {.md\:ml-auto {
     margin-left: auto;
   }.md\:mr-0 {
     margin-right: 0px;
   }.md\:block {
     display: block;
-  }.md\:flex {
-    display: flex;
   }.md\:w-6\/12 {
     width: 50%;
-  }.md\:w-1\/2 {
-    width: 50%;
-  }.md\:w-2\/3 {
-    width: 66.666667%;
-  }.md\:grid-cols-12 {
-    grid-template-columns: repeat(12, minmax(0, 1fr));
-  }.md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }.md\:p-2 {
-    padding: 0.5rem;
+  }.md\:w-3\/4 {
+    width: 75%;
   }.md\:pr-4 {
     padding-right: 1rem;
-  }.md\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+  }.md\:pt-36 {
+    padding-top: 9rem;
   }
-}@media (min-width: 1024px) {.lg\:col-span-12 {
-    grid-column: span 12 / span 12;
+}@media (min-width: 1024px) {.lg\:col-span-5 {
+    grid-column: span 5 / span 5;
+  }.lg\:col-span-7 {
+    grid-column: span 7 / span 7;
+  }.lg\:col-span-8 {
+    grid-column: span 8 / span 8;
+  }.lg\:col-span-4 {
+    grid-column: span 4 / span 4;
+  }.lg\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }.lg\:mt-0 {
+    margin-top: 0px;
   }.lg\:mb-0 {
     margin-bottom: 0px;
+  }.lg\:ml-3\.5 {
+    margin-left: 0.875rem;
+  }.lg\:ml-3 {
+    margin-left: 0.75rem;
+  }.lg\:mt-32 {
+    margin-top: 8rem;
+  }.lg\:mt-24 {
+    margin-top: 6rem;
   }.lg\:ml-0 {
     margin-left: 0px;
   }.lg\:block {
     display: block;
   }.lg\:flex {
     display: flex;
+  }.lg\:grid {
+    display: grid;
+  }.lg\:hidden {
+    display: none;
   }.lg\:w-5\/12 {
     width: 41.666667%;
   }.lg\:w-1\/2 {
     width: 50%;
+  }.lg\:max-w-5xl {
+    max-width: 64rem;
+  }.lg\:max-w-xl {
+    max-width: 36rem;
+  }.lg\:max-w-3xl {
+    max-width: 48rem;
   }.lg\:flex-none {
     flex: none;
+  }.lg\:flex-grow {
+    flex-grow: 1;
   }.lg\:basis-auto {
     flex-basis: auto;
+  }.lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }.lg\:grid-cols-12 {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
   }.lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }.lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }.lg\:flex-row {
     flex-direction: row;
   }.lg\:flex-nowrap {
     flex-wrap: nowrap;
+  }.lg\:items-center {
+    align-items: center;
   }.lg\:justify-start {
     justify-content: flex-start;
   }.lg\:justify-end {
     justify-content: flex-end;
   }.lg\:justify-between {
     justify-content: space-between;
+  }.lg\:gap-x-8 {
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
+  }.lg\:gap-x-12 {
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
   }.lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
   }.lg\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+  }.lg\:pt-16 {
+    padding-top: 4rem;
   }.lg\:text-left {
     text-align: left;
+  }.lg\:text-gray-400 {
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 }@media (min-width: 1280px) {.xl\:left-0 {
     left: 0px;
-  }.xl\:col-span-4 {
-    grid-column: span 4 / span 4;
   }.xl\:mb-0 {
     margin-bottom: 0px;
+  }.xl\:mt-40 {
+    margin-top: 10rem;
+  }.xl\:mr-12 {
+    margin-right: 3rem;
+  }.xl\:mt-16 {
+    margin-top: 4rem;
+  }.xl\:ml-14 {
+    margin-left: 3.5rem;
+  }.xl\:mr-14 {
+    margin-right: 3.5rem;
+  }.xl\:mt-12 {
+    margin-top: 3rem;
+  }.xl\:mr-6 {
+    margin-right: 1.5rem;
+  }.xl\:mt-44 {
+    margin-top: 11rem;
+  }.xl\:ml-12 {
+    margin-left: 3rem;
   }.xl\:ml-auto {
     margin-left: auto;
   }.xl\:hidden {
@@ -1740,6 +1828,15 @@ video {
     padding: 0.625rem;
   }.xl\:p-2 {
     padding: 0.5rem;
+  }.xl\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }.xl\:pt-44 {
+    padding-top: 11rem;
+  }.xl\:pb-32 {
+    padding-bottom: 8rem;
+  }.xl\:text-right {
+    text-align: right;
   }
 }
 
